# intrin_helper

./: .gitignore  intrin_helper.h  intrin_helper.hpp  readme.md
example/: CMakeLists.txt  build.sh
example/src/: arrayadd.cpp  arrayadd_performance.cpp  configuration.h  public_functions.h  timming.h  vadd_demo.cpp  vector_instruction_level.h  verify_instr_checker.cpp
kernel/: configure.hpp  shared_headers.h  vadd.h  vadd.hpp
utilities/: configure.hpp  instruction_check.hpp
